// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Carousel /> should render with default props 1`] = `
<div
  className="mfui-beta-carousel mfui-beta-carousel_nav-theme_light"
  onClick={[Function]}
>
  <Swiper
    allowTouchMove={true}
    autoplay={false}
    breakpoints={
      Object {
        "0": Object {
          "slidesPerView": 1,
          "spaceBetween": 16,
        },
        "1280": Object {
          "slidesPerView": 4,
          "spaceBetween": 20,
        },
        "768": Object {
          "slidesPerView": 3,
          "spaceBetween": 20,
        },
      }
    }
    centeredSlides={false}
    className="mfui-beta-carousel__swiper mfui-beta-carousel__swiper_default-inner-indents"
    effect="slide"
    loop={false}
    onFromEdge={[Function]}
    onReachBeginning={[Function]}
    onReachEnd={[Function]}
    onResize={[Function]}
    onSlideChange={[Function]}
    onSwiper={[Function]}
    onTouchEnd={[Function]}
    pagination={
      Object {
        "clickable": true,
      }
    }
    speed={300}
    watchOverflow={true}
    watchSlidesVisibility={true}
  >
    <SwiperSlide
      className="mfui-beta-carousel__slide"
      key="0/.0"
    >
      <Component>
        1
      </Component>
    </SwiperSlide>
    <SwiperSlide
      className="mfui-beta-carousel__slide"
      key="1/.1"
    >
      <Component>
        2
      </Component>
    </SwiperSlide>
  </Swiper>
  <NavArrow
    className="mfui-beta-carousel__arrow mfui-beta-carousel__arrow_prev"
    disabled={true}
    onClick={[Function]}
    theme="purple"
  />
  <NavArrow
    className="mfui-beta-carousel__arrow mfui-beta-carousel__arrow_next"
    disabled={false}
    onClick={[Function]}
    theme="purple"
    view="next"
  />
</div>
`;

exports[`<Carousel /> should render with props 1`] = `
<div
  className="mfui-beta-carousel mfui-beta-carousel_nav-theme_green className rootClass"
  onClick={[Function]}
>
  <Swiper
    allowTouchMove={false}
    autoplay={
      Object {
        "delay": 1000,
        "disableOnInteraction": false,
        "stopOnLastSlide": true,
        "waitForTransition": false,
      }
    }
    breakpoints={
      Object {
        "768": Object {
          "slidesPerView": "auto",
          "spaceBetween": 2,
        },
      }
    }
    centeredSlides={true}
    className="mfui-beta-carousel__swiper innerIndentsClass container"
    containerModifierClass="containerModifier"
    effect="fade"
    loop={true}
    noSwipingSelector="button"
    onFromEdge={[Function]}
    onReachBeginning={[Function]}
    onReachEnd={[Function]}
    onResize={[Function]}
    onSlideChange={[Function]}
    onSwiper={[Function]}
    onTouchEnd={[Function]}
    pagination={
      Object {
        "clickable": true,
        "el": ".some-el",
      }
    }
    speed={1000}
    watchOverflow={true}
    watchSlidesVisibility={true}
  >
    <SwiperSlide
      className="mfui-beta-carousel__slide slide"
      key="0/.0"
    >
      <Component>
        1
      </Component>
    </SwiperSlide>
    <SwiperSlide
      className="mfui-beta-carousel__slide slide"
      key="1/.1"
    >
      <Component>
        2
      </Component>
    </SwiperSlide>
  </Swiper>
  <NavArrow
    className="mfui-beta-carousel__arrow mfui-beta-carousel__arrow_prev prev"
    disabled={false}
    onClick={[Function]}
    theme="purple"
  />
  <NavArrow
    className="mfui-beta-carousel__arrow mfui-beta-carousel__arrow_next next"
    disabled={false}
    onClick={[Function]}
    theme="purple"
    view="next"
  />
</div>
`;
